Rollback JEP 459 String Templates as it was unexpectedly dropped in Java 23